axum-myroutes/tests/ui/fail_route_variant_with_data.stderr
error[E0532]: expected tuple struct or tuple variant, found unit variant `Route::Index`
  --> tests/ui/fail_route_variant_with_data.rs:10:10
   |
10 | #[derive(Clone)]
   |          ^^^^^
...
14 |     Index(u64),
   |     ----- `Route::Index` defined here

error[E0618]: expected function, found `Route`
  --> tests/ui/fail_route_variant_with_data.rs:10:10
   |
10 | #[derive(Clone)]
   |          ^^^^^ call expression requires function
...
14 |     Index(u64),
   |     ----- `Route::Index` defined here
